Added a similar code-cleanup as laddi did for platform3. Done to simplify merge of code from platform2 to platform3