@@ -1,5 +1,5 @@
 /*
- * $Id: Form.java,v 1.89 2005/10/10 15:26:20 tryggvil Exp $
+ * $Id: Form.java,v 1.89.2.1 2007/01/12 19:32:08 idegaweb Exp $
  * Created in 2000 by Tryggvi Larusson
  *
  * Copyright (C) 2000-2005 Idega Software hf. All Rights Reserved.
@@ -38,10 +38,10 @@ import com.idega.presentation.Script;
  * JSF has a new object called javax.faces.component.UIForm or javax.faces.component.html.HtmlForm and these new objects 
  * are recommended to use instead of this class in pure JSF applications.<br>
  * </p>
- *  Last modified: $Date: 2005/10/10 15:26:20 $ by $Author: tryggvil $
+ *  Last modified: $Date: 2007/01/12 19:32:08 $ by $Author: idegaweb $
  * 
  * @author <a href="mailto:tryggvil@idega.com">Tryggvi Larusson</a>
- * @version $Revision: 1.89 $
+ * @version $Revision: 1.89.2.1 $
  */
 public class Form
 // TODO: Move to extend UIForm
@@ -81,37 +81,37 @@ public class Form
 	public Object saveState(FacesContext ctx) {
 		Object values[] = new Object[14];
 		values[0] = super.saveState(ctx);
-		values[1] = maintainedParameters;
-		values[2] = Boolean.valueOf(maintainAllParameters);
-		values[3] = controlParameters;
-		values[4] = windowClass;
-		values[5] = new Integer(icObjectInstanceIDForWindow);
-		values[6] = classToInstanciateAndSubmitTo;
-		values[7] = new Integer(_submitToPage);
-		values[8] = Boolean.valueOf(sendToHTTPS);
-		values[9] = Boolean.valueOf(_disableObject);
-		values[10] = _objectsToDisable;
-		values[11] = Boolean.valueOf(_disableOnSubmit);
-		values[12] = Boolean.valueOf(showLoadingLayerOnSubmit);
-		values[13] = Boolean.valueOf(printLoadingLayer);
+		values[1] = this.maintainedParameters;
+		values[2] = Boolean.valueOf(this.maintainAllParameters);
+		values[3] = this.controlParameters;
+		values[4] = this.windowClass;
+		values[5] = new Integer(this.icObjectInstanceIDForWindow);
+		values[6] = this.classToInstanciateAndSubmitTo;
+		values[7] = new Integer(this._submitToPage);
+		values[8] = Boolean.valueOf(this.sendToHTTPS);
+		values[9] = Boolean.valueOf(this._disableObject);
+		values[10] = this._objectsToDisable;
+		values[11] = Boolean.valueOf(this._disableOnSubmit);
+		values[12] = Boolean.valueOf(this.showLoadingLayerOnSubmit);
+		values[13] = Boolean.valueOf(this.printLoadingLayer);
 		return values;
 	}
 	public void restoreState(FacesContext ctx, Object state) {
 		Object values[] = (Object[]) state;
 		super.restoreState(ctx, values[0]);
-		maintainedParameters = (List)values[1];
-		maintainAllParameters = ((Boolean)values[2]).booleanValue();
-		controlParameters = (Map)values[3];
-		windowClass = (Class)values[4];
-		icObjectInstanceIDForWindow = ((Integer)values[5]).intValue();
-		classToInstanciateAndSubmitTo = (Class)values[6];
-		_submitToPage = ((Integer)values[7]).intValue();
-		sendToHTTPS = ((Boolean)values[8]).booleanValue();
-		_disableObject = ((Boolean)values[9]).booleanValue();
-		_objectsToDisable = (Map)values[10];
-		_disableOnSubmit = ((Boolean)values[11]).booleanValue();
-		showLoadingLayerOnSubmit = ((Boolean)values[12]).booleanValue();
-		printLoadingLayer = ((Boolean)values[13]).booleanValue();
+		this.maintainedParameters = (List)values[1];
+		this.maintainAllParameters = ((Boolean)values[2]).booleanValue();
+		this.controlParameters = (Map)values[3];
+		this.windowClass = (Class)values[4];
+		this.icObjectInstanceIDForWindow = ((Integer)values[5]).intValue();
+		this.classToInstanciateAndSubmitTo = (Class)values[6];
+		this._submitToPage = ((Integer)values[7]).intValue();
+		this.sendToHTTPS = ((Boolean)values[8]).booleanValue();
+		this._disableObject = ((Boolean)values[9]).booleanValue();
+		this._objectsToDisable = (Map)values[10];
+		this._disableOnSubmit = ((Boolean)values[11]).booleanValue();
+		this.showLoadingLayerOnSubmit = ((Boolean)values[12]).booleanValue();
+		this.printLoadingLayer = ((Boolean)values[13]).booleanValue();
 	}
 	
 	/**
@@ -121,7 +121,7 @@ public class Form
 		// super();
 		setName(getID());
 		setMethod("post");
-		maintainAllParameters = false;
+		this.maintainAllParameters = false;
 		initialize();
 	}
 
@@ -142,7 +142,7 @@ public class Form
 		setName(getID());
 		setMethod(method);
 		setAction(actionURL);
-		maintainAllParameters = false;
+		this.maintainAllParameters = false;
 		initialize();
 	}
 
@@ -159,7 +159,7 @@ public class Form
 	public Form(Window myWindow) {
 		setName(getID());
 		setWindow(myWindow);
-		maintainAllParameters = false;
+		this.maintainAllParameters = false;
 		initialize();
 	}
 
@@ -288,20 +288,20 @@ public class Form
 		if (this._submitToPage != -1) {
 			// Set a builder page as the action
 			BuilderService bservice = getBuilderService(iwc);
-			this.setAction(bservice.getPageURI(_submitToPage));
+			this.setAction(bservice.getPageURI(this._submitToPage));
 		}
 		if (getWindow() != null) {
 			// iwc.setSessionAttribute(IdegaWebHandler.windowOpenerParameter,window);
 			com.idega.servlet.WindowOpener.storeWindow(iwc, getWindow());
 		}
-		if (_disableObject) {
+		if (this._disableObject) {
 			getScript().addFunction("disableObject", "function disableObject (inputs,value) {\n	if (inputs.length > 1) {\n	\tfor(var i=0;i<inputs.length;i++)\n	\t\tinputs[i].disabled=eval(value);\n	\t}\n	else\n	inputs.disabled=eval(value);\n}");
-			if (_disableOnSubmit) {
+			if (this._disableOnSubmit) {
 
-				Iterator iter = _objectsToDisable.keySet().iterator();
+				Iterator iter = this._objectsToDisable.keySet().iterator();
 				while (iter.hasNext()) {
 					String name = (String) iter.next();
-					String values = (String) _objectsToDisable.get(name);
+					String values = (String) this._objectsToDisable.get(name);
 					setCheckSubmit();
 					getScript().addToFunction("checkSubmit", "disableObject(findObj('" + name + "'),'" + String.valueOf(values) + "');");
 				}
@@ -314,19 +314,22 @@ public class Form
 	}
 
 	private void handleLoadingLayer(IWContext iwc) {
-		if (getParentPage() != null && showLoadingLayerOnSubmit && getTarget() == null) {// &&
+		if (getParentPage() != null && this.showLoadingLayerOnSubmit && getTarget() == null) {// &&
 																																											// !("iw_event_frame").equals(target)){
 
-			if (getParentPage().getAssociatedBodyScript().getFunction("showLoadingLayer") == null)
+			if (getParentPage().getAssociatedBodyScript().getFunction("showLoadingLayer") == null) {
 				getParentPage().getAssociatedScript().addFunction("showLoadingLayer", getShowLoadingLayerScript(iwc));
+			}
 
-			if (getParentPage().getAssociatedBodyScript().getFunction("createLoadingLayer") == null)
+			if (getParentPage().getAssociatedBodyScript().getFunction("createLoadingLayer") == null) {
 				getParentPage().getAssociatedBodyScript().addFunction("createLoadingLayer", getCreateLoadingLayerScript(iwc));
+			}
 
 			// getParentPage().setStyleDefinition("DIV.LoadLayer","visibility:hidden;position:absolute;");
 			IWStyleManager manager = IWStyleManager.getInstance();
-			if (!manager.isStyleSet("DIV.LoadLayer"))
+			if (!manager.isStyleSet("DIV.LoadLayer")) {
 				IWStyleManager.getInstance().setStyle("DIV.LoadLayer", "visibility:hidden;position:absolute;font-family: arial;" + "font-size: 9pt;font-weight: bold; background: #ffffff; border-style: ridge;border-color: #cbcbcb;" + "border-width: 2px;padding-top: 4px;padding-left: 8px;padding-right: 12px;padding-bottom:4px; top:48%;left:45%;");
+			}
 			// setOnClick("this.disabled=true;showLoadingLayer();this.form.submit();");
 			// getForm().setOnSubmit("showLoadingLayer();");
 			// setOnSubmitFunction("displayLoadingLayer","function
@@ -335,7 +338,7 @@ public class Form
 			// getParentPage().setOnUnLoad("showLoadingLayer();");
 			// /setOnSubmit("showLoadingLayer();");
 			//setCheckSubmit();
-			printLoadingLayer = true;
+			this.printLoadingLayer = true;
 		}
 	}
 
@@ -431,17 +434,17 @@ public class Form
 	}
 
 	public void maintainAllParameters() {
-		maintainAllParameters = true;
+		this.maintainAllParameters = true;
 	}
 
 	/**
 	 * Creates a hidden field if there is an action on the form again
 	 */
 	public void maintainParameter(String parameterName) {
-		if (maintainedParameters == null) {
-			maintainedParameters = new ArrayList();
+		if (this.maintainedParameters == null) {
+			this.maintainedParameters = new ArrayList();
 		}
-		maintainedParameters.add(parameterName);
+		this.maintainedParameters.add(parameterName);
 	}
 
 	/**
@@ -450,10 +453,10 @@ public class Form
 	 */
 	public void maintainParameters(List params) {
 		if (params != null) {
-			if (maintainedParameters == null) {
-				maintainedParameters = new ArrayList();
+			if (this.maintainedParameters == null) {
+				this.maintainedParameters = new ArrayList();
 			}
-			maintainedParameters.addAll(params);
+			this.maintainedParameters.addAll(params);
 		}
 	}
 
@@ -474,9 +477,9 @@ public class Form
 			while (iter.hasNext()) {
 				String parameterName = (String) iter.next();
 				String parameterValue;
-				if (parameterName.equals(IB_PAGE_PARAMETER) && _submitToPage > 0) {
+				if (parameterName.equals(IB_PAGE_PARAMETER) && this._submitToPage > 0) {
 					// fix for multipart forms
-					parameterValue = Integer.toString(_submitToPage);
+					parameterValue = Integer.toString(this._submitToPage);
 				}
 				else {
 					parameterValue = iwc.getParameter(parameterName);
@@ -504,9 +507,9 @@ public class Form
 				String parameterValue;
 				// System.out.print("parameterName = "+parameterName+" , parameterValue
 				// = "+parameterValue+" parameterSet = ");
-				if (parameterName.equals(IB_PAGE_PARAMETER) && _submitToPage > 0) {
+				if (parameterName.equals(IB_PAGE_PARAMETER) && this._submitToPage > 0) {
 					// fix for multipart forms
-					parameterValue = Integer.toString(_submitToPage);
+					parameterValue = Integer.toString(this._submitToPage);
 				}
 				else {
 					parameterValue = iwc.getParameter(parameterName);
@@ -566,7 +569,7 @@ public class Form
 		this.addGloballyMaintainedParameters(iwc);
 		this.addTheMaintainedBuilderParameters(iwc);
 
-		if (maintainAllParameters) {
+		if (this.maintainAllParameters) {
 			/*
 			 * if (iwc.getParameter("idega_special_form_parameter") != null) {
 			 * PresentationObjectContainer cont = (PresentationObjectContainer)
@@ -584,9 +587,9 @@ public class Form
 			// iwc.setSessionAttribute("idega_special_form_parameters", cont);
 			// }
 		}
-		else if (maintainedParameters != null) {
+		else if (this.maintainedParameters != null) {
 			//for (Enumeration e = maintainedParameters.elements(); e.hasMoreElements();) {
-			for (Iterator iter = maintainedParameters.iterator(); iter.hasNext();) {
+			for (Iterator iter = this.maintainedParameters.iterator(); iter.hasNext();) {
 				String tempParameter = (String) iter.next();
 				if (iwc.getParameter(tempParameter) != null) {
 					String[] strings = iwc.getParameterValues(tempParameter);
@@ -626,12 +629,12 @@ public class Form
 
 	public void print(IWContext iwc) throws Exception {
 		if (getScript().doesFunctionExist("checkSubmit")) {
-			if (printLoadingLayer) {
+			if (this.printLoadingLayer) {
 				getScript().addToFunction("checkSubmit", "showLoadingLayer();");
 			}
 			getScript().addToFunction("checkSubmit", "return true;");
 		}
-		else if (printLoadingLayer) {
+		else if (this.printLoadingLayer) {
 			this.setOnSubmit("showLoadingLayer()");
 		}
 		// if ( doPrint(iwc) ){
@@ -649,7 +652,7 @@ public class Form
 			// setAction(getIdegaSpecialRequestURI(iwc)+"?idega_session_id="+iwc.getSession().getId());
 			setAction(getIdegaSpecialRequestURI(iwc));
 		}
-		if (sendToHTTPS) {
+		if (this.sendToHTTPS) {
 			convertActionToHTTPS(iwc);
 		}
 
@@ -675,7 +678,7 @@ public class Form
 			print("</form>");
 		}
 		else if (getMarkupLanguage().equals("WML")) {
-			if (getAction() == null || _submitToPage != -1) {
+			if (getAction() == null || this._submitToPage != -1) {
 				// setAction(getIdegaSpecialRequestURI(iwc)+"?idega_session_id="+iwc.getSession().getId());
 				setAction(getIdegaSpecialRequestURI(iwc));
 			}
@@ -756,7 +759,7 @@ public class Form
 				obj.oldPopupWindow = (Window) this.oldPopupWindow.clone();
 			}
 
-			if (maintainedParameters != null) {
+			if (this.maintainedParameters != null) {
 				obj.maintainedParameters = (List) ((ArrayList)this.maintainedParameters).clone();
 			}
 
@@ -764,11 +767,11 @@ public class Form
 			// obj.controlParameter = (Parameter)this.controlParameter.clone();
 			// }
 
-			if (controlParameters != null) {
+			if (this.controlParameters != null) {
 				obj.controlParameters = (Map) ((HashMap) this.controlParameters).clone();
 			}
 
-			if (windowClass != null) {
+			if (this.windowClass != null) {
 				obj.windowClass = this.windowClass;
 			}
 
@@ -787,10 +790,10 @@ public class Form
 	 */
 
 	protected Map getControlParameters() {
-		if (controlParameters == null) {
-			controlParameters = new HashMap();
+		if (this.controlParameters == null) {
+			this.controlParameters = new HashMap();
 		}
-		return controlParameters;
+		return this.controlParameters;
 	}
 
 	/**
@@ -823,7 +826,7 @@ public class Form
 	 *          Set to true to disable, false will enable.
 	 */
 	public void setToDisableOnAction(String action, String objectName, boolean disable) {
-		_disableObject = true;
+		this._disableObject = true;
 		setOnAction(ACTION_ON_SUBMIT, "disableObject(findObj('" + objectName + "'),'" + String.valueOf(objectName) + "')");
 	}
 
@@ -852,11 +855,12 @@ public class Form
 	 *          Set to true to disable, false will enable.
 	 */
 	public void setToDisableOnSubmit(InterfaceObject object, boolean disable) {
-		_disableOnSubmit = true;
-		_disableObject = true;
-		if (_objectsToDisable == null)
-			_objectsToDisable = new HashMap();
-		_objectsToDisable.put(object.getName(), String.valueOf(disable));
+		this._disableOnSubmit = true;
+		this._disableObject = true;
+		if (this._objectsToDisable == null) {
+			this._objectsToDisable = new HashMap();
+		}
+		this._objectsToDisable.put(object.getName(), String.valueOf(disable));
 	}
 
 	protected void addControlParameter(String parameterName, String parameterValue) {
@@ -953,7 +957,7 @@ public class Form
 
 	private void setActionToInstanciatedClass(IWContext iwc) {
 		if (this.classToInstanciateAndSubmitTo != null) {
-			this.setAction(iwc.getIWMainApplication().getObjectInstanciatorURI(classToInstanciateAndSubmitTo));
+			this.setAction(iwc.getIWMainApplication().getObjectInstanciatorURI(this.classToInstanciateAndSubmitTo));
 		}
 	}
 
@@ -995,7 +999,7 @@ public class Form
 			associatedScript = (Script) getFacet(FACET_ASSOCIATEDSCRIPT);
 		}
 		else{
-			associatedScript = oldAssociatedScript;
+			associatedScript = this.oldAssociatedScript;
 		}
 		if (associatedScript == null) {
 			associatedScript = new Script();
@@ -1013,7 +1017,7 @@ public class Form
 			getFacets().put(FACET_ASSOCIATEDSCRIPT,associatedScript);
 		}
 		else{
-			oldAssociatedScript=associatedScript;
+			this.oldAssociatedScript=associatedScript;
 		}
 	}
 	protected Script getScript() {
@@ -1033,7 +1037,7 @@ public class Form
 	 * address
 	 */
 	public void setToSendToHTTPS(boolean doSendToHTTPS) {
-		sendToHTTPS = doSendToHTTPS;
+		this.sendToHTTPS = doSendToHTTPS;
 	}
 
 	/*
